# appguirs

./: .gitmodules  Cargo.toml  README.md  imgui.ini
src/: main.rs
src/appguirs/: Cargo.toml
src/appguirs/src/: lib.rs
src/appguirs/src/ui/: windows.rs
src/appguirs/src/window/: mod.rs
src/application/: mod.rs
src/clipboard/: mod.rs
src/ui/: ImGui.rs  mod.rs  style.rs
src/utils/: mod.rs
